--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				    <div class="site-tagline mb-3">Rhesus negatif (rh-) merupakan golongan darah dengan simbol minus (-). Populasi kepemilikan rh- sangat sedikit. Mari ketahui lebih lanjut!</div>
 				    <div class="cta-btns">
 					    <div class="mb-4"><a class="btn btn-primary font-weight-bold theme-btn" href="#">Coba di testflight</a></div>
+						<div class="mb-4"><a class="btn btn-primary font-weight-bold theme-btn " href="http://donorhin.technology/portfolio.html">Portfolio Saya</a></div>
 					    <!-- <ul class="app-stores list-unstyled list-inline mx-auto mx-md-0 d-inline-block">
 						    <li class="list-inline-item mr-3"><a href="#"><img class="ios" src="assets/images/appstore-apple.svg" alt="app-store"></a></li>
 						    <li class="list-inline-item"><a href="#"><img class="android" src="assets/images/appstore-android.svg" alt="google play"></a></li>
@@ -211,6 +212,7 @@
 		    <h3 class="text-white font-weight-bold mb-3">Aplikasi sedang dalam pengembangan</h3>
 		    <div class="text-white mx-auto single-col-max-width section-intro">Tim Donorhin terus melakukan perbaikan agar aplikasi menjadi lebih baik lagi. Anda dapat berkomunikasi atau memberi masukan melalui e-mail atau media sosial kami.</div>
 		    <a class="btn theme-btn theme-btn-ghost theme-btn-on-bg mt-4" href="#">Coba di testflight</a>
+			<a class="btn theme-btn theme-btn-ghost theme-btn-on-bg mt-4" href="http://donorhin.technology/portfolio.html">Portfolio Saya</a>
 	    </div>
     </section><!--//cta-section-->
            
