--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bootstrap 4 Mobile App Template">
-    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
+    <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+	<meta name="apple-itunes-app" content="app-id=1473584695 , affiliate-data=myAffiliateData, app-argument=myURL">
     <link rel="shortcut icon" href="favicon.ico"> 
     
     <!-- Google Font -->
