--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bootstrap 4 Mobile App Template">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-	<meta name="apple-itunes-app" content="app-id=1473584695 , affiliate-data=myAffiliateData, app-argument=myURL">
+	<meta name="apple-itunes-app" content="app-id=1473584695 , affiliate-data=myAffiliateData, app-argument=http://donorhin.technology">
     <link rel="shortcut icon" href="favicon.ico"> 
     
     <!-- Google Font -->
@@ -297,15 +297,6 @@
     <!-- Page Specific JS -->
     <script type="text/javascript" src="assets/plugins/jquery-flipster/dist/jquery.flipster.min.js"></script> 
     <script type="text/javascript" src="assets/js/flipster-custom.js"></script> 
-<script type="text/javascript">
-	const iOS = !!navigator.platform && /iPad|iPhone|iPod/.test(navigator.platform);
-
-if (iOS) {
-  // Just use the link of your app on the AppStore and replace https:// with itms://
-  window.location.href = "itms://itunes.apple.com/us/app/google-maps-transit-food/id585027354?mt=8";
-}
-	
-	</script> 
 	
 </body>
 </html> 
